<resources>
    <string name="app_name">Transparency Now</string>
    <string name="tab_text_1">Track</string>
    <string name="code_create_unique">Create workout room</string>
    <string name="connect_online">Find people online</string>
    <string name="place_holder">Place holder</string>
    <string name="tab_text_2">Access</string>
    <string name="tab_text_3">News</string>
    <string name="nav_header_title">Workout Partner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">username</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="connect">Connect</string>
    <string name="supportUs">Support Us</string>
    <string name="streaks">About Us</string>
    <string name="youTube">Youtube</string>
    <string name="sent">This is a sent message.</string>
    <string name="received">This is a received message.</string>
    <string name="messageBoxHint">Type a message</string>
    <string name="etEmailHint">Email</string>
    <string name="etPasswordHint">Password</string>
    <string name="btnSignUpText">Sign Up</string>
    <string name="btnLoginText">Login</string>
    <string name="share">Share</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_forums">Forums</string>
    <string name="menu_customise">Customise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactUs">Contact Us</string>
    <string name="category_prompt">Category</string>
    <string name="time_prompt">Date</string>
</resources>