<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/customise"
            android:icon="@drawable/ic_customise"
            android:title="@string/menu_customise" />
        <item
            android:id="@+id/forums"
            android:icon="@drawable/ic_chats"
            android:title="@string/menu_forums" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"/>
    </group>
    <item android:title="@string/connect" android:checkable="false"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contactUs"
            android:icon="@drawable/ic_baseline_phonelink_ring_24"
            android:title="@string/contactUs"/>
        <item
            android:id="@+id/aboutUs"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/streaks"/>
        <item
            android:id="@+id/youTube"
            android:icon="@drawable/ic_watchad"
            android:title="@string/youTube"/>
        <item
            android:id="@+id/supportUs"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/supportUs"/>
    </group>
</menu>